--- a/sass/5_components/_drop.scss
+++ b/sass/5_components/_drop.scss
@@ -32,6 +32,7 @@
 // <ul>, contains sub-items
 .drop__sub {
 	@include unstyled;
+	z-index: 20;
 
 	.drop--open & {}
 
@@ -58,7 +59,7 @@
 
 	@media only screen and (max-width: 600px) {
 		.drop__sub & {
-			border-top: 1px dotted;
+			border-top: 1px dotted mix($chicago, $alabaster, 20%);
 
 			.nav__link:before {
 				content: '» ';
